2001-05-12  Jeffrey Stedfast  <fejj@ximian.com>

	* gmime-utils.c (need_quotes): Include '.' as a char to quote.

	* gen-table.c (main): Fixed a type-o.

	* internet-address.c (decode_mailbox): Be a little more forgiving
	about unexpected chars while parsing the name part of the email
	address. Skip the bad char and then retry. If we fail again,
	*then* we abort.

	* gmime-utils.c: #include <alloca.h>

	* gmime-parser.c (g_mime_parser_construct_part): Oops, inend
	points to the end of the string, not the last char of the string
	(ie, '\0' not the char before it).

2001-05-08  Jeffrey Stedfast  <fejj@ximian.com>

	* gmime-table-private.h: Oops, take out the check for isblank().

	* internet-address.c (decode_quoted_string): Get rid of unused
	variable.
	(decode_address): Same.

2001-04-03  Jeffrey Stedfast  <fejj@ximian.com>

	* internet-address.c (decode_domain): Try to only get
	"fully-qualified" domain names, or ones that "look" like they are
	at least ;-)
	(decode_mailbox): If decode_domain() returns NULL, don't append
	the '@' char. Also make sure that the name is non-empty.

2001-04-01  Jeffrey Stedfast  <fejj@ximian.com>

	* gmime-utils.c (g_mime_utils_quote_string): Made smarter.

2001-03-31  Jeffrey Stedfast  <fejj@ximian.com>

	* Makefile.am: Added rules to build gen-table.c and added
	gmime-table-private.h to the build.

	* gen-table.c: New file to generate gmime-table-private.h if need
	be.

	* gmime-table-private.h: New file that contains
	gmime_special_table.

	* gmime-utils.c: Remove the gmime_special_table from here and
	instead #include gmime-table-private.h.

	* internet-address.c: #include gmime-table-private.h

2001-03-30  Jeffrey Stedfast  <fejj@ximian.com>

	* gmime-message.c (create_header): Simplified a tad.
	(g_mime_message_add_recipient): Updated for the new
	InternetAddress API.
	(g_mime_message_add_recipients_from_string): Simplified greatly
	using the new InternetAddress API.
